--- a/CBLExam121vMainPagev1.htm
+++ b/CBLExam121vMainPagev1.htm
@@ -246,7 +246,7 @@ display: none;
 	sense on behalf of another.	</label></br>
 <input type='radio' name='q121w16' value='B' id='q121w16'><label for=qZw16'B'>	B.  A person transacting business in connection with entry or clearance of vessels or other regulation of vessels under the navigation laws.	</label></br>
 <input type='radio' name='q121w16' value='C' id='q121w16'><label for=qZw16'C'>	C.  Any carrier bringing merchandise to the port of arrival or any bonded carrier transporting merchandise for another making entry for that merchandise for transportation in bond.	</label></br>
-<input type='radio' name='q121w16' value='D' id='q121w16'><label for=qZw16'D'>	D. An individual entering noncommercial merchandise for a partnership, association, or corporation,provided that the requirements of 19 CFR § 141.33 are met.	</label></br>
+<input type='radio' name='q121w16' value='D' id='q121w16'><label for=qZw16'D'>	D. An individual entering noncommercial merchandise for a partnership, association, or corporation,provided that the requirements of 19 CFR Â§ 141.33 are met.	</label></br>
 <input type='radio' name='q121w16' value='E' id='q121w16'><label for=qZw16'E'>	E.  A foreign trade zone operator or user engaging in activities within a zone that do not	
 		
 		
@@ -434,7 +434,7 @@ be transmitted to the Government within 7 working days from receipt by the broke
 	described in the paragraph below?	
 	The mixture contains chemical substances packaged for retail sale as a skin toner.	
 	It is a scented, blue, clear liquid that contains 0.5 percent salicylic acid.It is packaged for	
-	retail sale in eight fluid ounce bottles. Its other ingredients include water, alcohol, glycerin, isoteth-20, PEG-32, sodium citrate, fragrance, propylene glycol,dimethicone propyl PG­ betaine,benzophenone-4,algae extract, aloe barbadensis leaf extract, denatonium benzoate, and blue dye.	
+	retail sale in eight fluid ounce bottles. Its other ingredients include water, alcohol, glycerin, isoteth-20, PEG-32, sodium citrate, fragrance, propylene glycol,dimethicone propyl PGÂ­ betaine,benzophenone-4,algae extract, aloe barbadensis leaf extract, denatonium benzoate, and blue dye.	
 	The product is used to clear blotchy discolored patches on the skin for cosmetic purposes.	
 	Please be aware of the following Section and Chapter Notes in addition to the terms of each	
 	heading.	
@@ -600,7 +600,7 @@ be transmitted to the Government within 7 working days from receipt by the broke
 </div> 		
 <div id=category121w46 style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;"> 		
 <p class='question'>	46. Which of the followingis INCORRECT regardingeffective dates ofbondsand riders?	</p>
-<input type='radio' name='q121w46' value='A' id='q121w46'><label for=qZw46'A'>	A. A continuousbond, and any associated application required by §113.11, or rider, may be	
+<input type='radio' name='q121w46' value='A' id='q121w46'><label for=qZw46'A'>	A. A continuousbond, and any associated application required by Â§113.11, or rider, may be	
 	filed up to 60 days prior to the effectivedate requested for the continuous bond or rider.	</label></br>
 <input type='radio' name='q121w46' value='B' id='q121w46'><label for=qZw46'B'>	B. Single transaction bond  A single transaction bond is effective on the date of the transaction identified on CBP Form 301.	</label></br>
 <input type='radio' name='q121w46' value='C' id='q121w46'><label for=qZw46'C'>	C.  Continuous bond. A continuous bond is effective on the effective date identified on CBP	
@@ -633,7 +633,7 @@ be transmitted to the Government within 7 working days from receipt by the broke
 <p id="demo47"></p>		
 </div> 		
 <div id=category121w49 style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;"> 		
-<p class='question'>	49.Which of the following documents MUST be filed pursuant to 19 CFR § 10.1(a) in	
+<p class='question'>	49.Which of the following documents MUST be filed pursuant to 19 CFR Â§ 10.1(a) in	
 	connection with the entry of articles ina shipment valued over $2,500.00 and claimed to be free of duty under subheading 9801.00.10 or 9802.00.20,Harmonized Tariff Schedule of the	
 	United States (HTSUS):	</p>
 <input type='radio' name='q121w49' value='A' id='q121w49'><label for=qZw49'A'>	A. A declaration by the assembler	</label></br>
@@ -693,8 +693,8 @@ be transmitted to the Government within 7 working days from receipt by the broke
 <p class='question'>	54.Antique articles are prohibited entry under the Endangered Species Act of 1973 (19	
 	USC1521)with some exceptions.Which of the following statement is FALSE?	</p>
 <input type='radio' name='q121w54' value='A' id='q121w54'><label for=qZw54'A'>	A. The article is not less than 100 years	</label></br>
-<input type='radio' name='q121w54' value='B' id='q121w54'><label for=qZw54'B'>	B.  The articles are entered at a port designated in 19 CFR § 18.26	</label></br>
-<input type='radio' name='q121w54' value='C' id='q121w54'><label for=qZw54'C'>	C.  The articles are composed in whole or inpart of any endangered or threatened species as listed in 50 CFR § 17.11 or 50 CFR§ 17.12	</label></br>
+<input type='radio' name='q121w54' value='B' id='q121w54'><label for=qZw54'B'>	B.  The articles are entered at a port designated in 19 CFR Â§ 18.26	</label></br>
+<input type='radio' name='q121w54' value='C' id='q121w54'><label for=qZw54'C'>	C.  The articles are composed in whole or inpart of any endangered or threatened species as listed in 50 CFR Â§ 17.11 or 50 CFRÂ§ 17.12	</label></br>
 <input type='radio' name='q121w54' value='D' id='q121w54'><label for=qZw54'D'>	D. The articles have not been repaired or modified with any part of any such endangered or threatened species on or after December 28, 1973.	</label></br>
 <input type='radio' name='q121w54' value='E' id='q121w54'><label for=qZw54'E'>	E.  A declaration for Importation or Exportation ofFish or Wildlife (USFWF)  Form 3-177 or its electronic equivalent is filed at the time of entry with the port director who will	
 	forward the form to the U.S. Fish and Wildlife Service	</label></br>
@@ -747,12 +747,12 @@ be transmitted to the Government within 7 working days from receipt by the broke
 <p id="demo57"></p>		
 </div> 		
 <div id=category121w59 style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;"> 	Category X-Fines,Penalties and Forfeitures	
-<p class='question'>	59.Inaccordance with 19 CFR §Part 171AppendixB, which of the following circumstances	
+<p class='question'>	59.Inaccordance with 19 CFR Â§Part 171AppendixB, which of the following circumstances	
 	would NOT be considered a "mitigating factor''inthe CBP administrative penalty decision	
 	for a proposed or assessed penalty claim?	</p>
 <input type='radio' name='q121w59' value='A' id='q121w59'><label for=qZw59'A'>	A. Demonstration of a consistent pattern of importations that is in compliance with all	
 	applicable CBP laws and regulations.	</label></br>
-<input type='radio' name='q121w59' value='B' id='q121w59'><label for=qZw59'B'>	B.  Timely compliance with lawful CBP requests for records related to the alleged violation(s) in accordance with 19 CFR § 163.6.	</label></br>
+<input type='radio' name='q121w59' value='B' id='q121w59'><label for=qZw59'B'>	B.  Timely compliance with lawful CBP requests for records related to the alleged violation(s) in accordance with 19 CFR Â§ 163.6.	</label></br>
 <input type='radio' name='q121w59' value='C' id='q121w59'><label for=qZw59'C'>	C.  Providing CBP with additional information relating to the subject violation or other	
 	violations.	</label></br>
 <input type='radio' name='q121w59' value='D' id='q121w59'><label for=qZw59'D'>	D. Takingremedial action to pay the actual1oss of duties prior to a penalty notice and within	
@@ -773,14 +773,14 @@ be transmitted to the Government within 7 working days from receipt by the broke
 <p id="demo59"></p>		
 </div> 		
 <div id=category121w61 style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;"> 		
-<p class='question'>	61.In order to perfect a prior-disclosure under 19 CFR § 162.74, the disclosing party must	
+<p class='question'>	61.In order to perfect a prior-disclosure under 19 CFR Â§ 162.74, the disclosing party must	
 	provide CBP with a description of the involved class or kind of merchandise, the impacted importation or drawback claim(s), specification of the material false statement(s) or omission(s), and-to the best of the disclosing party's knowledge - the true and accurate information that should have been provided to Customs,within which of the following	
 	timeframes?	</p>
 <input type='radio' name='q121w61' value='A' id='q121w61'><label for=qZw61'A'>	A. Within 30 days of the initial disclosure date,or additional time as granted by the	
 	concerned Fines, Penalties and Forfeitures Officer.	</label></br>
 <input type='radio' name='q121w61' value='B' id='q121w61'><label for=qZw61'B'>	B.  Within 30 days of CBP's formal request.	</label></br>
 <input type='radio' name='q121w61' value='C' id='q121w61'><label for=qZw61'C'>	C.  Within 30 days of the oral disclosure date, unlessadditional time has been formally requested from CBP within this same period.	</label></br>
-<input type='radio' name='q121w61' value='D' id='q121w61'><label for=qZw61'D'>	D. Within 30 days of CBP's formal request, unless a concurrent protest has been filed within the requirements of 19 CFR § 174.12 during the same period	</label></br>
+<input type='radio' name='q121w61' value='D' id='q121w61'><label for=qZw61'D'>	D. Within 30 days of CBP's formal request, unless a concurrent protest has been filed within the requirements of 19 CFR Â§ 174.12 during the same period	</label></br>
 <input type='radio' name='q121w61' value='E' id='q121w61'><label for=qZw61'E'>	E.  Within 30 days of the initial disclosure date, unless the information or data is unavailable	
 	or unknown to the disclosing party.	</label></br>
 </ul>		
@@ -919,8 +919,8 @@ be transmitted to the Government within 7 working days from receipt by the broke
 <div id=category121w72 style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;"> 		
 <p class='question'>	72.FSJ Imports orders a shipment of bulk perftune,manufactured in China,which will be	
 	repackaged into empty glass retail bottles that were manufactured and imported from ???? Mexico.The glass bottles bear the name and address ofFSJ imports.The perfume arrivesin a reusable metal container which will be returned to China far use in future imports.With regards to origin, the reusable metal container must be marked indicatingthe contents	
-	                           upon presentation to CBP and the empty glass containers must bear markings	
-	indicating that:the contents ??? and the bottles  ???</p>
+	Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â  upon presentation to CBP and the empty glass containers must bear markings	
+	indicating that:the contents ??? and the bottles Â ???</p>
 <input type='radio' name='q121w72' value=' A' id='q121w72'><label for=qZw72' '>	A. Were made in China; were made in China;were made in Mexico	</label></br>
 <input type='radio' name='q121w72' value='B' id='q121w72'><label for=qZw72'B'>	B.  None;were made in China;None	</label></br>
 <input type='radio' name='q121w72' value='C' id='q121w72'><label for=qZw72'C'>	C.  None;None; were made in Mexico	</label></br>
@@ -965,12 +965,12 @@ be transmitted to the Government within 7 working days from receipt by the broke
 </div> 		
 <div id=category121w76 style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;"> 		
 <p class='question'>	76.A mail shipment consistingof one handbag valued at $900.00,bearing a spurious mark	
-	identical with, or substantially indistinguishable from, a mark registered on the Principal Register of the U.S. Patent and Trademark Office and recorded with CBP,is not subject to seizure under 19 CFR § 133.21(e) if:	</p>
+	identical with, or substantially indistinguishable from, a mark registered on the Principal Register of the U.S. Patent and Trademark Office and recorded with CBP,is not subject to seizure under 19 CFR Â§ 133.21(e) if:	</p>
 <input type='radio' name='q121w76' value='A' id='q121w76'><label for=qZw76'A'>	A. The handbagis intended for personal use,and the exemption for the same typeof article	
 	has not been taken within the 30-day detention period	</label></br>
 <input type='radio' name='q121w76' value='B' id='q121w76'><label for=qZw76'B'>	B. The handbagis intended for personal use,and the quantity does not exceed the exemption of one article of the type bearing the protected trademark.	</label></br>
-<input type='radio' name='q121w76' value='C' id='q121w76'><label for=qZw76'C'>	C. The circumstances allowing trademark or trade name restriction(s) set forth in 19 CFR §	
-	133.22(c) or 19 CFR § 133.23(d) are established	</label></br>
+<input type='radio' name='q121w76' value='C' id='q121w76'><label for=qZw76'C'>	C. The circumstances allowing trademark or trade name restriction(s) set forth in 19 CFR Â§	
+	133.22(c) or 19 CFR Â§ 133.23(d) are established	</label></br>
 <input type='radio' name='q121w76' value='D' id='q121w76'><label for=qZw76'D'>	D. The addressee appears in person at the appropriate CBP office and, at the time, removes or obliterates the mark on the handbag in a manner acceptable to CBP.	</label></br>
 <input type='radio' name='q121w76' value='E' id='q121w76'><label for=qZw76'E'>	E. None of the above.	</label></br>
 </ul>		
@@ -986,7 +986,7 @@ be transmitted to the Government within 7 working days from receipt by the broke
 <p id="demo76"></p>		
 </div> 		
 <div id=category121w78 style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;"> 		
-<p class='question'>	78.When transferring merchandise from a zone, merchandise in                          status may NOf	
+<p class='question'>	78.When transferring merchandise from a zone, merchandise in Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â status may NOf	
 	be entered for warehouse.	</p>
 <input type='radio' name='q121w78' value='A' id='q121w78'><label for=qZw78'A'>	A. Nonprivileged Foreign	</label></br>
 <input type='radio' name='q121w78' value='B' id='q121w78'><label for=qZw78'B'>	B. Privileged Foreign	</label></br>
@@ -1015,7 +1015,7 @@ be transmitted to the Government within 7 working days from receipt by the broke
 	activated status of a zone or zone site,or the privilege to admit, manufacture,manipulate, exhibit, destroy, transfer or remove merchandise at a zone or zone site for a period not to exceed 90 days?	</p>
 <input type='radio' name='q121w80' value='A' id='q121w80'><label for=qZw80'A'>	A. The approval of the application to activate the zone was obtained through fraud or the misstatement of a material fact	</label></br>
 <input type='radio' name='q121w80' value='B' id='q121w80'><label for=qZw80'B'>	B.  The operator neglects or refusesto obey any proper order of a Customsofficer or any	Customs order, rule, or regulation relating to the operation or administration of a zone. </label></br>
-<input type='radio' name='q121w80' value='C' id='q121w80'><label for=qZw80'C'>	 C.  The operator fails to furnish a current list of names, addresses, or other information as	</label></br>required by 19 CFR § 146.7. </label></br>	
+<input type='radio' name='q121w80' value='C' id='q121w80'><label for=qZw80'C'>	 C.  The operator fails to furnish a current list of names, addresses, or other information as	</label></br>required by 19 CFR Â§ 146.7. </label></br>	
 <input type='radio' name='q121w80' value='D' id='q121w80'><label for=qZw80'D'>	D. The operator,or any officer,agent, or employeeof the operator,discloses to an unauthorized person proprietary information contained on a Customs form or in the inventory control and recordkeeping system.	</label></br>
 <input type='radio' name='q121w80' value='E' id='q121w80'><label for=qZw80'E'>	E.  The operator,or any officer of a corporation which has been granted the right to operate a zone, is convicted of or has committed any acts which would constitute a misdemeanor.	</label></br>
 <p id="demo79"></p>		
@@ -1661,11 +1661,11 @@ var nonce = (async function(){
   
 	const txn_dict = {'gas': web3.utils.toHex(250000),'gasPrice': web3.utils.toHex(web3.utils.toWei('250', 'gwei')), 'to': contract_address, 'from': wallet_address, 'value': web3.utils.toHex(2000001),'nonce': _nonce}
   
-	const private_key = await new ethereumjs.Buffer.Buffer('5719b1f584994efc976d1e4af93597c9116a76a67dc442082b34c26a0aecf424', 'hex')
+	
   
-	const tx = await new ethereumjs.Tx(txn_dict, {chain:'ropsten'})
+	//const tx = await new ethereumjs.Tx(txn_dict, {chain:'ropsten'})
 
-	tx.sign(private_key)
+	//tx.sign(private_key)
 
 	const serializedTx = await tx.serialize();
 
@@ -1704,11 +1704,11 @@ var nonce = (async function(){
 	//})()
 	const txn_dict = {'gas': web3.utils.toHex(40000),'gasPrice': web3.utils.toHex(web3.utils.toWei('40', 'gwei')), 'from': wallet_address, 'to': contract_address, 'nonce': web3.utils.toHex(_nonce),'data': _data}
   	//alert(txn_dict['nonce'])
-	const private_key = await new ethereumjs.Buffer.Buffer('5719b1f584994efc976d1e4af93597c9116a76a67dc442082b34c26a0aecf424', 'hex')
+	
   
-	const tx = await new ethereumjs.Tx(txn_dict, {chain:'ropsten'})
+	//const tx = await new ethereumjs.Tx(txn_dict, {chain:'ropsten'})
 
-	tx.sign(private_key)
+	//tx.sign(private_key)
 
 	const serializedTx = await tx.serialize();
 
