--- a/CBLExam121vMainPage.htm
+++ b/CBLExam121vMainPage.htm
@@ -1535,7 +1535,7 @@ const contract_bal = new web3.eth.Contract(abi, contract_address);
 
 const wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
 
-client_account = accounts[0]; // assuming master client addr
+//client_account = accounts[0]; // assuming master client addr
 
 getAccounts(function(result){
 	console.log(result[0]);
