--- a/CBLExam121vMainPage.htm
+++ b/CBLExam121vMainPage.htm
@@ -1529,7 +1529,7 @@ var acct = (async function(){
   	
   var result = await getAccounts()
   	
-  console.log('Woo done!', result)
+  console.log('Woo done!', result[0])
   balance = result
   //alert(balance)
 
