--- a/CBLExam121vMainPage.htm
+++ b/CBLExam121vMainPage.htm
@@ -1043,7 +1043,7 @@ be transmitted to the Government within 7 working days from receipt by the broke
 <input type="text" id="user_name" name="user_name" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:15; right:105;">		
 <input type="text" id="password" name="password" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:15; right:15;">
 
-//<input type="button" value="send_ether" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:15; right:15;" onClick="show1()"/>	
+//<input type="button" value="send_ether" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:15; right:15;" onClick="click_get()"/>	
 </div>
 <div id=category121w82>	
 <input type="button" value="Show Answers" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;" onClick="containsX()"/>	
@@ -1525,6 +1525,7 @@ function getAccounts(){
 	
 }
 
+function click_get(){
 var acct = (async function(){
   	
   var result = await getAccounts()
@@ -1534,6 +1535,13 @@ var acct = (async function(){
   //alert(balance)
 
 })()
+}
+
+this.web3.eth.getAccounts().then(accounts => {
+   console.log(`Updating USER from ${this.currentUser} to ${accounts[0]}`)
+   this.currentUser = accounts[0]
+   return accounts[0]
+  })
 
 const contract_address = web3.utils.toChecksumAddress("0x41548a0b9590cad1cd3fda08e27ceb911fe6d68c")
 
