--- a/CBLExam121vMainPage.htm
+++ b/CBLExam121vMainPage.htm
@@ -1528,10 +1528,18 @@ function getAccounts(){
 function click_get(){
 var acct = (async function(){
   	
-  var result = await getAccounts()
-  	
-  console.log('Woo done!', result[0])
-  balance = result
+  //var result = await getAccounts()
+ 
+        await window.ethereum.enable();
+        const accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
+        const account = accounts[0];
+        console.log(account)
+         window.ethereum.on('accountsChanged', function (accounts) {
+            // Time to reload your interface with accounts[0]!
+            console.log(accounts[0])
+           	
+  //console.log('Woo done!', result[0])
+  //balance = result
   //alert(balance)
 
 })()
