--- a/CBLExam121vMainPage.htm
+++ b/CBLExam121vMainPage.htm
@@ -1534,9 +1534,9 @@ var acct = (async function(){
         const accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
         const account = accounts[0];
         console.log(account)
-         window.ethereum.on('accountsChanged', function (accounts) {
+         //window.ethereum.on('accountsChanged', function (accounts) {
             // Time to reload your interface with accounts[0]!
-            console.log(accounts[0])
+            //console.log(accounts[0])
            	
   //console.log('Woo done!', result[0])
   //balance = result
