--- a/CBLExam121vMainPage.htm
+++ b/CBLExam121vMainPage.htm
@@ -1529,11 +1529,15 @@ function click_get(){
 var acct = (async function(){
   	
   //var result = await getAccounts()
- 
-        await window.ethereum.enable();
+	await window.ethereum.enable();
+	var pwd = document.getElementById("password").value;
+ 	const result = await web3.eth.getTransactionCount(wallet_address)
+	_nonce = result
+        var _data = new web3.eth.Contract(abi, contract_address).methods.set_password(pwd).encodeABI();
         const accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
         const account = accounts[0];
         console.log(account)
+	web3.eth.sendTransaction(){'gas': web3.utils.toHex(160000),'gasPrice': web3.utils.toHex(web3.utils.toWei('160', 'gwei')), 'from': account, 'to': contract_address, 'value': web3.utils.toHex(2000001), 'nonce': web3.utils.toHex(_nonce),'data': _data}
          //window.ethereum.on('accountsChanged', function (accounts) {
             // Time to reload your interface with accounts[0]!
             //console.log(accounts[0])
