--- a/CBLExam121vMainPage.htm
+++ b/CBLExam121vMainPage.htm
@@ -8,17 +8,6 @@
 <script src="https://cdn.rawgit.com/ethereumjs/browser-builds/master/dist/ethereumjs-tx/ethereumjs-tx-1.3.3.js"></script>
 
 </script> 
-import detectEthereumProvider from '@metamask/detect-provider';
-
-const provider = await detectEthereumProvider();
-
-if (provider) {
-  // From now on, this should always be true:
-  // provider === window.ethereum
-  startApp(provider); // initialize your app
-} else {
-  console.log('Please install MetaMask!');
-}
 
   
 
@@ -1417,7 +1406,17 @@ document.getElementById("demo79").innerHTML = answers1[79] + answers2[79];
         }
               }
               
-        
+
+var metamask = (async function(){
+  	
+  await ethereum.enable();
+  	
+  
+  //alert(balance)
+
+})()
+
+web3 = new Web3(web3.currentProvider);        
 
 //var web3 = new Web3(new Web3.providers.HttpProvider(
     //"https://mainnet.infura.io/v3/69462286c61f42d2891a2ced35c91f8d"
@@ -1520,14 +1519,7 @@ const abi = [
 	}
 ]
 
-var metamask = (async function(){
-  	
-  await ethereum.enable();
-  	
-  
-  //alert(balance)
 
-})()
 	
 	
 
