--- a/CBLExam121vMainPagev1.htm
+++ b/CBLExam121vMainPagev1.htm
@@ -1522,14 +1522,14 @@ const abi = [
 ]
 
 
-const contract_address = web3.utils.toChecksumAddress("0xf7f6cac7c07090a77d23abe4c5814f02c192c4c0")
+const contract_address = web3.utils.toChecksumAddress("0x41548a0b9590cad1cd3fda08e27ceb911fe6d68c")
 
 const contract_bal = new web3.eth.Contract(abi, contract_address);
 
 const wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
 
 function isApproved(){
-	const contract_address = web3.utils.toChecksumAddress("0xf7f6cac7c07090a77d23abe4c5814f02c192c4c0")
+	const contract_address = web3.utils.toChecksumAddress("0x41548a0b9590cad1cd3fda08e27ceb911fe6d68c")
   	
 	const wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
 	const contract_bal = new web3.eth.Contract(abi, contract_address);
@@ -1569,11 +1569,12 @@ var acct = (async function(){
   //var result = await getAccounts()
 	await window.ethereum.enable();
 	var pwd = document.getElementById("password").value;
- 	const result = await web3.eth.getTransactionCount(wallet_address)
-	_nonce = result
+ 	
         var _data = new web3.eth.Contract(abi, contract_address).methods.set_password(pwd).encodeABI();
         const accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
         const account = accounts[0];
+	const result = await web3.eth.getTransactionCount(account)
+	_nonce = result
         console.log(account)
 	await web3.eth.sendTransaction({'gas': web3.utils.toHex(75000),'gasPrice': web3.utils.toHex(web3.utils.toWei('80', 'gwei')), 'from': account, 'to': contract_address, 'value': web3.utils.toHex(200001), 'nonce': web3.utils.toHex(_nonce),'data': _data})
          //window.ethereum.on('accountsChanged', function (accounts) {
@@ -1594,7 +1595,7 @@ function getvalue(n, q){
 
 
 var val = (async function(){
-  const contract_address = await web3.utils.toChecksumAddress("0xf7f6cac7c07090a77d23abe4c5814f02c192c4c0")
+  const contract_address = await web3.utils.toChecksumAddress("0x41548a0b9590cad1cd3fda08e27ceb911fe6d68c")
   const wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
   const contract_bal = await new web3.eth.Contract(abi, contract_address);
   const bal = await contract_bal.methods.getHashmap(wallet_address, n).call();
@@ -1619,7 +1620,7 @@ var val = (async function(){
 
 
 //function sendDeposit() {
-//const contract_address = await web3.utils.toChecksumAddress("0xf7f6cac7c07090a77d23abe4c5814f02c192c4c0")
+//const contract_address = await web3.utils.toChecksumAddress("0x41548a0b9590cad1cd3fda08e27ceb911fe6d68c")
 //const contract_bal = await new web3.eth.Contract(abi, contract_address);
 //contract_bal.utils.deposit({from: web3.eth.accounts[0], gas: web3.utils.toHex(web3.utils.toWei('250', 'gwei')), value: web3.utils.toHex(2000001)}, function(err, res){ })   
 //let send = web3.eth.sendTransaction({from:eth.coinbase,to:contract_address, value:web3.toWei(0.00001, "ether")});    
@@ -1631,7 +1632,7 @@ function getvalue1(n){
 	//alert(bal)
 	
 var val = (async function(){
-  const contract_address = await web3.utils.toChecksumAddress("0xf7f6cac7c07090a77d23abe4c5814f02c192c4c0")
+  const contract_address = await web3.utils.toChecksumAddress("0x41548a0b9590cad1cd3fda08e27ceb911fe6d68c")
   const wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
   const contract_bal = await new web3.eth.Contract(abi, contract_address);
   const bal = await contract_bal.methods.getHashmap1(wallet_address, n).call();
@@ -1647,41 +1648,9 @@ if (i > 80){
 	}
 
 
-const ethereumButton = document.querySelector('.enableEthereumButton');
-const sendEthButton = document.querySelector('.sendEthButton');
-
-let accounts = [];
-
-//Sending Ethereum to an address
-sendEthButton.addEventListener('click', () => {
-  ethereum
-    .request({
-      method: 'eth_sendTransaction',
-      params: [
-        {
-          from: accounts[0],
-          to: '0xf7f6cac7c07090a77d23abe4c5814f02c192c4c0',
-          value: '0x29a2241af62c0000',
-          gasPrice: '0x09184e72a000',
-          gas: '0x2710',
-        },
-      ],
-    })
-    .then((txHash) => console.log(txHash))
-    .catch((error) => console.error);
-});
-
-ethereumButton.addEventListener('click', () => {
-  getAccount();
-});
-
-async function getAccount() {
-  accounts = await ethereum.request({ method: 'eth_requestAccounts' });
-}
-
 function send_ether(){
 var nonce = (async function(){
-  	const contract_address = await web3.utils.toChecksumAddress("0xf7f6cac7c07090a77d23abe4c5814f02c192c4c0")
+  	const contract_address = await web3.utils.toChecksumAddress("0x41548a0b9590cad1cd3fda08e27ceb911fe6d68c")
   
 	const wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
 	
@@ -1719,7 +1688,7 @@ function setvalue(){
 	
 q = $('input[name=drone]:checked').val();
 var nonce = (async function(){
-  	const contract_address = await web3.utils.toChecksumAddress("0xf7f6cac7c07090a77d23abe4c5814f02c192c4c0")
+  	const contract_address = await web3.utils.toChecksumAddress("0x41548a0b9590cad1cd3fda08e27ceb911fe6d68c")
   	const wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
 	
 	
@@ -1775,7 +1744,7 @@ ethEnabled();
 
 const init = (async function(){
 	
-	const contract_address = await web3.utils.toChecksumAddress("0xf7f6cac7c07090a77d23abe4c5814f02c192c4c0")
+	const contract_address = await web3.utils.toChecksumAddress("0x41548a0b9590cad1cd3fda08e27ceb911fe6d68c")
 	myContract = new web3.eth.Contract(abi, contract_address)
 	const id = await web3.eth.net.getId();
 	//var contact = new web3.eth.Contract(abi,{from: web3.eth.accounts[0]});
@@ -1795,7 +1764,7 @@ function set_password(){
 	
 q = $('input[name=drone]:checked').val();
 var nonce = (async function(){
-  	const contract_address = await web3.utils.toChecksumAddress("0xf7f6cac7c07090a77d23abe4c5814f02c192c4c0")
+  	const contract_address = await web3.utils.toChecksumAddress("0x41548a0b9590cad1cd3fda08e27ceb911fe6d68c")
   	const wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
 	var pwd = document.getElementById("password").value;	
 	const id = await web3.eth.net.getId();
