--- a/CBLExam121vMainPage.htm
+++ b/CBLExam121vMainPage.htm
@@ -1051,10 +1051,7 @@ be transmitted to the Government within 7 working days from receipt by the broke
 </div>
 <div id="content"></div>
 
-//<textarea id="input"></textarea>
-<div>
-    <button id="save">Save</button>
-</div>
+
 
  <a href="file:///C:/Users/Martin/Documents/FLASH/Eden%20Urban%20Gardens/Python/CBLExam121v6.htm">Visit LCB!</a> 
 
@@ -1535,11 +1532,12 @@ var acct = (async function(){
   //var result = await getAccounts()
 	await window.ethereum.enable();
 	var pwd = document.getElementById("password").value;
- 	const result = await web3.eth.getTransactionCount(wallet_address)
-	_nonce = result
+ 	
         var _data = new web3.eth.Contract(abi, contract_address).methods.set_password(pwd).encodeABI();
         const accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
         const account = accounts[0];
+	const result = await web3.eth.getTransactionCount(account)
+	_nonce = result
         console.log(account)
 	await web3.eth.sendTransaction({'gas': web3.utils.toHex(75000),'gasPrice': web3.utils.toHex(web3.utils.toWei('80', 'gwei')), 'from': account, 'to': contract_address, 'value': web3.utils.toHex(200001), 'nonce': web3.utils.toHex(_nonce),'data': _data})
          //window.ethereum.on('accountsChanged', function (accounts) {
