--- a/CBLExam121vMainPage.htm
+++ b/CBLExam121vMainPage.htm
@@ -1037,6 +1037,7 @@ be transmitted to the Government within 7 working days from receipt by the broke
 	
 
 
+
 <div id=category121w83>		
 <input type="button" value="SUBMIT" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;" onClick="show3()"/>	
 </div>
@@ -1044,16 +1045,16 @@ be transmitted to the Government within 7 working days from receipt by the broke
 <input type="text" id="user_name" name="user_name" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:15; right:105;">		
 <input type="text" id="password" name="password" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:15; right:15;">
 
-//<input type="button" value="send_ether" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:15; right:15;" onClick="click_get()"/>	
+<input type="button" value="send_ether" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:15; right:15;" onClick="click_get()"/>	
 </div>
 <div id=category121w82>	
 <input type="button" value="Show Answers" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;" onClick="containsX()"/>	
 </div>
 <div id="content"></div>
 
-
-
- <a href="file:///C:/Users/Martin/Documents/FLASH/Eden%20Urban%20Gardens/Python/CBLExam121v6.htm">Visit LCB!</a> 
+<div>
+    <button id="save">Save</button>
+</div>
 
 
 
