--- a/CBLExam121vMainPage.htm
+++ b/CBLExam121vMainPage.htm
@@ -1056,7 +1056,7 @@ be transmitted to the Government within 7 working days from receipt by the broke
     <button id="save">Save</button>
 </div>
 
-
+<a href="/CBLExam121vMainPagev1.htm">Visit LCB!</a> 
 
 	
 
