--- a/CBLExam121vMainPage.htm
+++ b/CBLExam121vMainPage.htm
@@ -1068,7 +1068,7 @@ be transmitted to the Government within 7 working days from receipt by the broke
 
 (function (global) {
     document.getElementById("save").addEventListener("click", function () {
-        global.localStorage.setItem("mySharedData", document.getElementById("password").value);
+        global.localStorage.setItem("password", document.getElementById("password").value);
     }, false);
 }(window));
 
