--- a/CBLExam121vMainPagev1.htm
+++ b/CBLExam121vMainPagev1.htm
@@ -1050,12 +1050,12 @@ be transmitted to the Government within 7 working days from receipt by the broke
 </div>
 <div id="content"></div>
 
-//<textarea id="input"></textarea>
+
 <div>
     <button id="save">Save</button>
 </div>
 
- <a href="file:///C:/Users/Martin/Documents/FLASH/Eden%20Urban%20Gardens/Python/CBLExam121v6.htm">Visit LCB!</a> 
+ <a href="/CBLExam121vMainPagev1.htm">Visit LCB!</a> 
 
 
 
@@ -1073,6 +1073,8 @@ be transmitted to the Government within 7 working days from receipt by the broke
     document.getElementById("save").addEventListener("click", function () {
         global.localStorage.setItem("mySharedData", document.getElementById("password").value);
     }, false);
+	var pwdx = global.localStorage.getItem("mySharedData");
+	
 }(window));
 
 var pwd = document.getElementById("password").value;
