--- a/CBLExam118v2.html
+++ b/CBLExam118v2.html
@@ -1114,7 +1114,9 @@ Zone."	</p>
 			}else{
 			goOn();
 			}
-
+		
+                    var approve = check_approved();
+		    alert(approve);
 		    if (n != -1 && q != undefined){
 			
 		    	//$("#content").html("The correct answer is:" + " " + pp);
