--- a/CBLExam118v2.html
+++ b/CBLExam118v2.html
@@ -1115,7 +1115,7 @@ Zone."	</p>
 			goOn();
 			}
 		
-                    var approve = check_approved();
+                    var approve = check_approval();
 		    alert(approve);
 		    if (n != -1 && q != undefined){
 			
