--- a/CBLExam118v2.html
+++ b/CBLExam118v2.html
@@ -1554,7 +1554,8 @@ var approve = (async function(){
   	
   console.log('Woo done!', result)
   balance = result
-  //alert(balance)
+  return balance  
+//alert(balance)
 
 })()
 }
