--- a/CBLExam118v2.html
+++ b/CBLExam118v2.html
@@ -1077,8 +1077,7 @@ Zone."	</p>
 
 <script>
 
-                    var approve = check_approval();
-		    alert(approve);	
+                    	
 
 	var i = 1;
 	function increase()
@@ -1554,7 +1553,7 @@ var approve = (async function(){
   	
   console.log('Woo done!', result)
   balance = result
-  return balance  
+  show1() 
 //alert(balance)
 
 })()
