--- a/CBLExam118v2.html
+++ b/CBLExam118v2.html
@@ -1059,7 +1059,7 @@ Zone."	</p>
 
 
 <div id=category118w83>		
-<input type="button" value="SUBMIT" onClick="show1()"/>	
+<input type="button" value="SUBMIT" onClick="check_approval()"/>	
 </div>
 <div id=category118w82>	
 <input type="button" value="SUBMIT" onClick="show2()"/>	
