--- a/CBLExam121vMainPage.htm
+++ b/CBLExam121vMainPage.htm
@@ -76,7 +76,7 @@ display: none;
 <h1 style="color:grey; font-family: helvetica narrow, sans-serif;">&#9096 CUSTOMS BROKER EXAMS </h3>
 <h2 style="color:grey; font-family: helvetica narrow, sans-serif;">April 2021</h4>	
 
- <a href="CBLExam118v2.htm">April 2018 Customs Broker Exam/a>  
+ <a href="CBLExam118v2.htm.">April 2018 Customs Broker Exam</a>  
 
 <div id=category121w1 style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;"> 		
 <p class='question'>	1.  What is the CLASSIFICATION of the brassiere?	</p>
