--- a/CBLExam118v2.html
+++ b/CBLExam118v2.html
@@ -1553,7 +1553,7 @@ var approve = (async function(){
   	
   console.log('Woo done!', result)
   balance = result
-  if(balance == True){
+  if(balance == true){
   	show1();
 	}else{
 	alert("sign in")
