--- a/CBLExam118v2.html
+++ b/CBLExam118v2.html
@@ -1087,8 +1087,8 @@ Zone."	</p>
 		$("#category" + 118 + "w" + i).show();
 		$("#content").html("");
 	}
-	var mat1 = Math.floor((Math.random() * 3) + 1);
-        var mat = Math.floor((Math.random() * 85) + 1);
+	//var mat1 = Math.floor((Math.random() * 3) + 1);
+        //var mat = Math.floor((Math.random() * 85) + 1);
 	var count = 0;
 	var answers1 = []
         function show1()
