--- a/CBLExam118v2.html
+++ b/CBLExam118v2.html
@@ -1112,7 +1112,9 @@ Zone."	</p>
 		    if (q == undefined){
 			doAgain();
 			}else{
-			goOn();
+			i++;
+		$("#category" + 118 + "w" + i).show();
+		$("#content").html("");
 			}
 		
 
