--- a/CBLExam117v2.html
+++ b/CBLExam117v2.html
@@ -1115,9 +1115,9 @@ font-style: italic;
 
 <input type="button" value="send_ether" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:15; right:15;" onClick="click_get()"/>			
 
-//<div id=category117w83>		
+<div id=category117w83>		
 <input type="button" value="SUBMIT" onClick="check_approval()"/>	
-//</div>
+</div>
 <div id=category117w82>	
 <input type="button" value="SUBMIT" onClick="show2()"/>	
 </div>
@@ -1389,7 +1389,7 @@ font-style: italic;
    
  $(document).ready(function(){
             $("#category" + 117 + "w" + 1).show();
-            setInterval('show()',1000);
+            //setInterval('show()',1000);
         });
     function doAgain1(){
   
