--- a/CBLExam118v2.html
+++ b/CBLExam118v2.html
@@ -1112,10 +1112,11 @@ Zone."	</p>
 		    if (q == undefined){
 			doAgain();
 			}else{
-			i++;
-		$("#category" + 118 + "w" + i).show();
-		$("#content").html("");
-			}
+			goOn();
+			//i++;
+		//$("#category" + 118 + "w" + i).show();
+		//$("#content").html("");
+			//}
 		
 
 		    if (n != -1 && q != undefined){
